--- a/src/app/components/layout/app-header/app-header.component.html
+++ b/src/app/components/layout/app-header/app-header.component.html
@@ -41,7 +41,6 @@
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
               </li> -->
-
         </ul>
         <div class="logo-center">
           <a class="navbar-brand" [routerLink]="['']" [routerLinkActive]="['active']"><img
@@ -54,7 +53,6 @@
           <li *ngIf="user"><a (click)="logout()" class="log-links">Log out</a></li>
         </ul>
       </div>
-
       <div class="collapse navbar-collapse m" id="main-menu" *ngIf="isMobileMenu" [className]="toggleDisplayDivIf ?  'showmenu' : 'hidemenu'">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -69,15 +67,13 @@
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/enrollment']" [routerLinkActive]="['active']">Join</a>
           </li>
-          <li class="cart-item"><a [routerLink]="['/store/cart']"><i class="fa fa-shopping-bag"></i><span *ngIf="cartItems" class="cart-info">{{cartItems}}</span></a></li>
-          <li *ngIf="user"><a (click)="logout()" class="log-links">Log out</a></li>
+         <li class="nav-item" *ngIf="!user"><a [routerLink]="['/sign-in']" class="log-links nav-link">SIGN IN</a></li>
+         <li class="nav-item" *ngIf="user"><a (click)="logout()" class="log-links nav-link">Log out</a></li>
         </ul>
         <div class="logo-center">
           <a class="navbar-brand" [routerLink]="['']" [routerLinkActive]="['active']"><img
               src="../../assets/logo-wink.png" /></a>
-        </div>
-  
-     
+        </div>  
       </div>
     </div>
   </nav>
