--- a/src/app/components/store/cart/cart.component.css
+++ b/src/app/components/store/cart/cart.component.css
@@ -157,7 +157,7 @@ section.cart-header .grid-box-shadow .cart-singleitem .data-cart .cart-quantity 
   box-shadow: 0px 0px 5px #bdbdbd;
 }
 
-.cart-singleitem .media-left a {
+.cart-singleitem .media-left a,.cart-singleitem .media-left {
   position: relative;
   display: block;
 }
