--- a/src/app/components/home/about/about.component.css
+++ b/src/app/components/home/about/about.component.css
@@ -86,6 +86,7 @@ section.contact-form {padding: 0 0 60px;}
   font-size: 16px;
   max-width: 150px;
   padding: 10px 0;
+  line-height: 15px;
 }
 
 .contactfom-wrapper .form-group textarea {
