--- a/src/app/components/store/checkout/checkout.component.html
+++ b/src/app/components/store/checkout/checkout.component.html
@@ -361,7 +361,7 @@
                                         </ngb-panel>
                                     </ngb-accordion>
                                     <div class="cta-continue">
-                                        <button class="btn btn-continue">
+                                        <button  (click)="OnCheckOut()" class="btn btn-continue">
                                             Save and continue
                                         </button>
                                     </div>
