--- a/src/app/components/store/product-detail/product-detail.component.html
+++ b/src/app/components/store/product-detail/product-detail.component.html
@@ -54,7 +54,7 @@
                           <div class="product-info">
                               <p>Take the battle out of bedtime! Our Kids Sleep Melts are formulated with high-quality melatonin and natural ingredients to help your little one get the kind of sleep they need.</p>
                           </div>
-                          <div class="prod-bundle-select">
+                          <!-- <div class="prod-bundle-select">
                               <h3>Select Bundle</h3>
                                       <div class="radio-bundle">
                                       <div class="form-check form-check-inline">
@@ -66,8 +66,28 @@
                                           <label class="form-check-label" for="inlineRadio2">2-pk (Save 5%)</label>
                                           </div>
                                       </div>
+                          </div> -->
+
+                          <div class="prod-bundle-select">
+                            <h3>Select Bundle</h3>
+                            <div *ngFor="let bundle of bundles" class="radio-bundle">
+                              <div class="form-check form-check-inline">
+                                <input
+                                  class="form-check-input"
+                                  type="radio"
+                                  name="inlineRadioOptions"
+                                  id="{{bundle.id}}"
+                                  value="{{bundle.value}}"
+                                  (change)="checkBundle(bundle.value,productDetail.price)"
+                                />
+                                <label class="form-check-label" for="{{bundle.id}}"
+                                  >{{bundle.name}}</label
+                                >
+                              </div>               
+                            </div>
                           </div>
-                          <div class="prod-bundle-select mt-0 delivery-radio">
+
+                          <!-- <div class="prod-bundle-select mt-0 delivery-radio">
                               <h3>Select Delivery</h3>
                                       <div class="radio-bundle">
                                       <div class="form-check form-check-inline">
@@ -79,38 +99,70 @@
                                           <label class="form-check-label" for="inlineRadio4">Subscribe & Save 15%</label>
                                           </div>
                                       </div>
+                          </div> -->
+                          <div class="prod-bundle-select mt-0 delivery-radio">
+                            <h3>Select Delivery</h3>
+                            <div *ngFor="let type of cartTypes; let i = index" class="radio-bundle">
+                              <div class="form-check form-check-inline">
+                                <input
+                                  class="form-check-input"
+                                  type="radio"
+                                  name="inlineRadioOptionsdelivery"
+                                  id="{{i}}{{type}}"
+                                  value="{{type}}"
+                                  (change)="checkDelivery(type)"                      
+                                />
+                                <label class="form-check-label" for="{{i}}{{type}}"
+                                  >{{type == 0 ? 'Single Delivery' : 'Subscribe & Save 15%'}}</label>
+                              </div>                 
+                            </div>
                           </div>
+
                           <div class="custom-shiping">
-                              <h3>Customize Shipment</h3>
-                              <div class="choose-shipping">
-                                  <div class="form-group">
-                                      <select class="form-control">
-                                          <option>Qty 1</option>
-                                          <option>Qty 2</option>
-                                          <option>Qty 3</option>
-                                          <option>Qty 4</option>
-                                      </select>
-                                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 7.171 4.6">
-                                          <path id="Path_2028" data-name="Path 2028" d="M342.6,9.4l2.6,2.6a.967.967,0,0,0,1.4,0l2.6-2.6a1,1,0,0,0-.7-1.7h-5.2A1,1,0,0,0,342.6,9.4Z" transform="translate(-342.315 -7.7)"/>
-                                          </svg>
-
-                                  </div>
-                                  <div class="form-group">
-                                      <select class="form-control">
-                                          <option>Every Month</option>
-                                          <option>Every Week</option>
-                                          <option>Every Year</option>
-                                      </select>
-                                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 7.171 4.6">
-                                          <path id="Path_2028" data-name="Path 2028" d="M342.6,9.4l2.6,2.6a.967.967,0,0,0,1.4,0l2.6-2.6a1,1,0,0,0-.7-1.7h-5.2A1,1,0,0,0,342.6,9.4Z" transform="translate(-342.315 -7.7)"/>
-                                          </svg>
-
-                                  </div>
-
+                            <h3>Customize Shipment</h3>
+                            <div class="choose-shipping">
+                              <div class="form-group">
+                                <select [(ngModel)]="quantityValue"  [ngModelOptions]="{standalone: true}" class="form-control">
+                                  <option class="dropdown-item" disabled selected value="undefined">Select Quantity</option>
+                                  <option *ngFor="let qty of quantity" [value]="qty.value">
+                                  {{qty.name}}
+                                   </option>
+                                </select>
+                                <svg
+                                  xmlns="http://www.w3.org/2000/svg"
+                                  viewBox="0 0 7.171 4.6"
+                                >
+                                  <path
+                                    id="Path_2028"
+                                    data-name="Path 2028"
+                                    d="M342.6,9.4l2.6,2.6a.967.967,0,0,0,1.4,0l2.6-2.6a1,1,0,0,0-.7-1.7h-5.2A1,1,0,0,0,342.6,9.4Z"
+                                    transform="translate(-342.315 -7.7)"
+                                  />
+                                </svg>
                               </div>
+                              <div *ngIf="showSubscription" class="form-group">
+                                <select [(ngModel)]="subscriptionModel"  [ngModelOptions]="{standalone: true}" class="form-control">
+                                  <option class="dropdown-item" disabled selected value="undefined">Select</option>                     
+                                  <option *ngFor="let year of years" [value]="year.value">
+                                  {{year.name}}
+                                   </option>
+                                </select>
+                                <svg
+                                  xmlns="http://www.w3.org/2000/svg"
+                                  viewBox="0 0 7.171 4.6"
+                                >
+                                  <path
+                                    id="Path_2028"
+                                    data-name="Path 2028"
+                                    d="M342.6,9.4l2.6,2.6a.967.967,0,0,0,1.4,0l2.6-2.6a1,1,0,0,0-.7-1.7h-5.2A1,1,0,0,0,342.6,9.4Z"
+                                    transform="translate(-342.315 -7.7)"
+                                  />
+                                </svg>
+                              </div>
+                            </div>
                           </div>
                                   <div class="cart-btn">
-                                      <button type="submit" (click)="addToCart(product)" class="btn btn-cart">${{productDetail.price}} ADD</button>
+                                      <button type="submit" (click)="addToCart(productDetail)" class="btn btn-cart">${{productDetail.price}} ADD</button>
                                   </div>
                       </div>
                   </div>
