--- a/src/app/components/store/checkout/checkout.component.html
+++ b/src/app/components/store/checkout/checkout.component.html
@@ -156,8 +156,7 @@
                                         <td>$74.97</td>
                                     </tr>
                                 </tfoot>
-                            </table>
-    
+                            </table>    
                            </div>
                         </ng-template>
                         </ngb-panel>
@@ -206,7 +205,7 @@
             </div>
             <div class="col-sm-12 col-md-12 col-lg-7 col-lg-pull-5">
                 <div class="checkout-steps-3">
-                        <ngb-accordion [closeOthers]="true" activeIds="checkoutstep1" class="panel-stepbar">
+                        <ngb-accordion [closeOthers]="true" activeIds="checkoutstep1" class="panel-stepbar">                                                  
                             <ngb-panel id="checkoutstep1">
                                 <ng-template ngbPanelTitle>
                                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 24 24"> <defs> <clipPath id="clip-path"> <rect width="24" height="24" fill="none"/> </clipPath> </defs> <g id="Icon_Check_Circle_Rounded" data-name="Icon / Check Circle / Rounded" clip-path="url(#clip-path)"> <rect id="Box" width="24" height="24" fill="none"/> <path id="Path_2034" data-name="Path 2034" d="M247.2,14.3l-3.6-3.6a.967.967,0,0,1,0-1.4.967.967,0,0,1,1.4,0l2.9,2.9,6.9-6.9a.99.99,0,0,1,1.4,1.4l-7.6,7.6A.967.967,0,0,1,247.2,14.3ZM249.9,0a10,10,0,1,0,10,10A10.029,10.029,0,0,0,249.9,0Z" transform="translate(-238 2)" fill="#1cc584"/> </g> </svg>
@@ -228,8 +227,7 @@
                                             </ng-template>
                                         <ng-template ngbPanelContent>
                                         <div class="content-card steps-inner">
-                                            <div [className]="inputdata ?  'special-field datafilled form-group ' : 'special-field dataempty form-group'" id="subscr-schedule">
-                                                
+                                            <div [className]="inputdata ?  'special-field datafilled form-group ' : 'special-field dataempty form-group'" id="subscr-schedule">                                               
                                                 <input type="text" class="form-control" [(ngModel)]="inputdata" bsDatepicker [maxDate]="maxDate" [bsConfig]="{ isAnimated: true, adaptivePosition: true, selectFromOtherMonth: true  }"/>
                                                 <label class="form-label">Select Start Date</label>
                                                 <span class="btn-add-promo">
@@ -250,6 +248,7 @@
                                         </ng-template>
                                         </ngb-panel>
                                         <ngb-panel id="shipping-address" >
+                                            
                                             <ng-template ngbPanelTitle>
                                                 <div class="heading-step1">
                                                     <h4>Shipping Address</h4>
@@ -262,47 +261,75 @@
                                                 </div>
                                             </ng-template>
                                         <ng-template ngbPanelContent>
-                                        <div class="content-card steps-inner shipping-address-form">
-                                            <form>
+                                            <form [formGroup]="form" (ngSubmit)="onSubmit()">
+                                        <div class="content-card steps-inner shipping-address-form">                                            
                                                 <div class="row">
                                                     <div class="col-md-12">
                                                         <div class="form-group">
-                                                            <input type="text" placeholder="First Name" name="fname" class="form-control"/>
+                                                            <input type="text" class="form-control" formControlName="firstName" placeholder="First Name"
+                                                            [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
+                                                          <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
+                                                            <div *ngIf="f.firstName.errors.required">First Name is required</div>
+                                                          </div>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-12">
                                                         <div class="form-group">
-                                                            <input type="text" placeholder="Last Name" name="lname" class="form-control"/>
+                                                            <input type="text" class="form-control" formControlName="lastName" placeholder="Last Name"
+                                                            [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
+                                                          <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
+                                                            <div *ngIf="f.lastName.errors.required">Last Name is required</div>
+                                                          </div>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-12">
                                                         <div class="form-group">
-                                                            <input type="text" placeholder="Street Address" name="street_address" class="form-control"/>
+                                                            <input type="text" class="form-control" formControlName="streetAddress" placeholder="Street Address"
+                                                            [ngClass]="{ 'is-invalid': submitted && f.streetAddress.errors }" />
+                                                          <div *ngIf="submitted && f.streetAddress.errors" class="invalid-feedback">
+                                                            <div *ngIf="f.streetAddress.errors.required">Street Address is required</div>
+                                                          </div>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-6">
                                                         <div class="form-group">
-                                                            <input type="text" placeholder="City" name="city" class="form-control"/>
+                                                            <input type="text" class="form-control" formControlName="city" placeholder="City"
+                                                            [ngClass]="{ 'is-invalid': submitted && f.city.errors }" />
+                                                          <div *ngIf="submitted && f.city.errors" class="invalid-feedback">
+                                                            <div *ngIf="f.city.errors.required">City is required</div>
+                                                          </div>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-6">
                                                         <div class="form-group">
-                                                            <input type="text" placeholder="State" name="state" class="form-control"/>
+                                                            <input type="text" class="form-control" formControlName="state" placeholder="State"
+                                                            [ngClass]="{ 'is-invalid': submitted && f.state.errors }" />
+                                                          <div *ngIf="submitted && f.state.errors" class="invalid-feedback">
+                                                            <div *ngIf="f.state.errors.required">First Name is required</div>
+                                                          </div>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-12">
                                                         <div class="form-group">
-                                                            <input type="text" placeholder="ZIP" name="zipcode" class="form-control"/>
+                                                            <input type="number" class="form-control" formControlName="zip" placeholder="Zip"
+                                                            [ngClass]="{ 'is-invalid': submitted && f.zip.errors }" />
+                                                        <div *ngIf="submitted && f.zip.errors" class="invalid-feedback">
+                                                            <div *ngIf="f.zip.errors.required">Zip is required</div>
+                                                        </div>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-12">
                                                         <div class="form-group">
-                                                            <input type="text" placeholder="Country" name="country" class="form-control"/>
+                                                            <input type="text" class="form-control" formControlName="country" placeholder="Country"
+                                                            [ngClass]="{ 'is-invalid': submitted && f.country.errors }" />
+                                                          <div *ngIf="submitted && f.country.errors" class="invalid-feedback">
+                                                            <div *ngIf="f.country.errors.required">First Name is required</div>
+                                                          </div>
                                                         </div>
                                                     </div>
-                                                </div>
-                                            </form>
+                                                </div>                                          
                                         </div>
+                                    </form>                                     
                                         </ng-template>
                                         </ngb-panel>
                                         <ngb-panel id="shipping-method">
@@ -359,12 +386,7 @@
                                                 </div>
                                         </ng-template>
                                         </ngb-panel>
-                                    </ngb-accordion>
-                                    <div class="cta-continue">
-                                        <button  (click)="OnCheckOut()" class="btn btn-continue">
-                                            Save and continue
-                                        </button>
-                                    </div>
+                                    </ngb-accordion>                                   
                                 </ng-template>
                             </ngb-panel> 
                             <ngb-panel id="checkoutstep2">
@@ -427,8 +449,7 @@
                                                           </g>
                                                           <text id="_" data-name="?" transform="translate(837 897)" fill="#1cb1c5" font-size="18.6" font-family="SegoeUI, Segoe UI"><tspan x="0" y="0">?</tspan></text>
                                                         </g>
-                                                      </svg>
-                                                      
+                                                      </svg>                                                      
                                                 </span>
                                             </div>
                                         </div>
@@ -485,12 +506,10 @@
                                                                     </div>
                                                                 </label>
                                                               </div>
-                                                        </li>
-                                                        
+                                                        </li>                                                        
                                                     </ul>
                                                 </div>
-                                            </div>
-                                            
+                                            </div>                                            
                                     </ng-template>
                                     </ngb-panel>
                                     <ngb-panel id="card-info">
@@ -750,21 +769,18 @@
                                         <span class="batch-text">Every order is backed by our 100% Happy Guarantee</span>
                                     </div>
                                 </div>
-
                             </ng-template>
                             </ngb-panel>
                         </ngb-accordion>
                   </div>
-            </div>
-        
+            </div>        
         </div>
     </div>
 </section>
 
 
 <ng-template #loyal_conversion let-modal>
-    <div [ngClass]="{'loyal_conversion_modal': true}">
-        
+    <div [ngClass]="{'loyal_conversion_modal': true}">        
         <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
           <span aria-hidden="true">&times;</span>
         </button>
