--- a/src/app/components/store/cart/cart.component.html
+++ b/src/app/components/store/cart/cart.component.html
@@ -88,13 +88,16 @@
                        </option>
                     </select> -->
 
-                    <select [formControlName]="i" (change)='quantityModel(cartItem.price)' [(ngModel)]="quantityValue"  [ngModelOptions]="{standalone: true}" class="form-control">
+                    <select [formControlName]="i" id="select_id" (change)='quantityModel(cartItem,$event.target.value)' [(ngModel)]="quantityValue"  [ngModelOptions]="{standalone: true}" class="form-control">
                       <option class="dropdown-item" disabled selected value="undefined">{{cartItem.quantityModel}}</option>
                         <option *ngFor="let qty of quantity" [value]="qty.value">{{qty.name}}</option>
                      </select>
+                     <!-- <select (change)="onChange($event.target.value)">
+                      <option *ngFor="let i of quantity">{{i.name}}</option>
+                  </select> -->
 
                     </div>
-                    <p class="price-product">${{ cartItem.price }}</p>
+                    <p class="price-product">${{ cartItem.bv }}</p>
                   </div>
                 </div>
               </div>
